--- a/index.html
+++ b/index.html
@@ -6,20 +6,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="index.css">
-
-    <script async defer src="https://accounts.google.com/gsi/client"></script>
   </head>
   <body>
     <script src="https://unpkg.com/jwt-decode/build/jwt-decode.js"></script>
     <script src="js/index.js"></script>
-    <script src="js/drive_api.js"></script>
-    <div id="g_id_onload"
+    <!-- <div id="g_id_onload"
         data-client_id="660437883218-87b4c7jvt14pljlhj7gdmiul60bf0m30.apps.googleusercontent.com"
         data-context="signin"
         data-ux_mode="popup"
         data-callback="initClient"
         data-auto_prompt="false">
-    </div>
+    </div> -->
 
       <div class="g_id_signin"
           data-type="standard"
@@ -30,11 +27,13 @@
           data-logo_alignment="left">
       </div>
         <div style="position: absolute; right: 10vw">
-          <button onclick="getToken();">Get access token</button>
+          <button id="authorize_button" onclick="getParentFolder();">Get Parent Folder</button>
           <button onclick="createTimeRelativeDocument();">Test</button>
-          <button onclick="getBaseFolder();">Get Drive</button>
-          <button onclick="revokeToken();">Revoke token</button>
+          <button id="signout_button" onclick="handleSignoutClick();">Revoke token</button>
       </div>
-
+      <script src="js/picker_api.js"></script>
+      <script src="js/drive_api.js"></script>
+      <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
+      <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
   </body>
 </html>
