--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
   <head>
     <title>Drive Sorter</title>
-    <link rel = "icon" href = 
-    "titleIcon.png" 
-            type = "image/x-icon">
+    <link rel = "icon" href = "title_icon.png" type = "image/x-icon">
     <meta charset="utf-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
