--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Drive Sorter</title>
-    <link rel = "icon" href = "title_icon.png" type = "image/x-icon">
+    <link rel = "icon" href = "images/title_icon.png" type = "image/x-icon">
     <meta charset="utf-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,12 +33,12 @@
       </div>
       <h1 id="MainTitle">Drive Sorter</h1>
       <div id="CogContainer">
-        <img src="doc_icon.png" class="doc_icon" alt="">
-        <img src="cog_wheel.png" class="doc_cog" alt="">
-        <img src="icon.png" class="icon" alt="">
-        <img src="cog_wheel.png" class="cog" alt="">
-        <img src="sheets_icon.png" class="sheets_icon" alt="">
-        <img src="cog_wheel.png" class="sheets_cog" alt="">
+        <img src="images/doc_icon.png" class="doc_icon" alt="">
+        <img src="images/cog_wheel.png" class="doc_cog" alt="">
+        <img src="images/icon.png" class="icon" alt="">
+        <img src="images/cog_wheel.png" class="cog" alt="">
+        <img src="images/sheets_icon.png" class="sheets_icon" alt="">
+        <img src="images/cog_wheel.png" class="sheets_cog" alt="">
       </div>
 
       <div style="position: fixed; left: 0; top: 0;">  
